# SDev.Python

./: .gitignore  .pylintrc  CLAUDE.md  LICENSE  README.md  claude_review.html  notes.txt  pyproject.toml
.claude/: settings.json
.claude/commands/: code_review.md  recommendations.md  test_review.md
claude/: code-review.html  recommendations.html
claude/formats/: code_review.example.html  recommendations.example.html
claude/output/: code_review.html
docs/: Crank-Nicolson with positivity.py  PDEs.txt  analytical_approx.py  finite-volume.py  least_squares_calibration.html  mollifier.py  notes.txt
docs/stovol/: demo.py  heston_cf.py  mc_reference.py  plot_surfaces.py  products.py  slv_solver.py
examples/: datafiles.py
examples/analytics/: implied_vol_schadner.py
examples/montecarlo/: mcrun.py
examples/pde/: ex_forwardpde.py  ex_pde_convergence.py
examples/raschka/: ch3_coding_attention.py  ch7_instruction_finetuning.py  raschka_dnn.py
examples/stovol/: stovolgen.py  stovolinvtrain.py  stovoltrain.py
examples/volatility/: ex_dupire_calib.py  ex_iv_calib.py  ex_ivol_models.py  ex_lv_dupire_calib.py  ex_lv_section_calib.py  ex_lvsection_calib.py
models/pinns_worst_of/: pinns_worst_of.xlsx
models/pinns_worstof/: model_2_assets.h5
notebooks/: CheckSeries.ipynb  Check_SABR.ipynb  Deep Learning SABR Calibration.ipynb  Deep Learning SABR Model.ipynb  Deep Learning StoVol-MB.ipynb  Deep Learning a PDE for Call Options.ipynb  Deep Learning a PDE for Worst Of Options.ipynb  DeepBSDE_Solver.ipynb  Feynman_Kac_Solver.ipynb  Generate_Samples_SABR.ipynb  MC_Simulation.ipynb  ML_Regression.ipynb  ML_Sample.ipynb  PINN_Solver.ipynb  Simple AD Monte-Carlo Greeks.ipynb  StoVol Dataset Generation.ipynb  StoVol Sample Generation.ipynb  StoVol Training.ipynb  Train_SABR.ipynb  anomaly_detection.ipynb
notebooks/aad/: AAD MC Greeks.ipynb
notebooks/algos/: NDEL.ipynb  get_data.ipynb  get_yahoo.ipynb  ndel_cointegration.ipynb
notebooks/cointegration/: Back Testing.ipynb  Compare historical and implied vol.ipynb  Hourly PnL Analysis.ipynb  NDEL.ipynb  PnL Analysis with a fixed basket.ipynb  PnL Analysis.ipynb  Search for cointegration basket Multi dates.ipynb  Search for cointegration basket.ipynb  Stability Test.ipynb
notebooks/ivol/: Implied Vol.ipynb  ImpliedVol-Dupire.ipynb  ImpliedVol-LvSection.ipynb  ImpliedVol.ipynb
notebooks/jansen/: linear_regression.ipynb
notebooks/llms/: Claude - Hugging Face JsonExtractor.txt  Claude - More on Json.txt  Claude.HuggingFace.txt  Claude.py  Claude.txt  Clause - Use Instructor (easiest).txt  chat_gpt2.ipynb  gpt2_instructions.ipynb  hugging_face_json.ipynb  ollama_json.ipynb
notebooks/mc/: MC-Payoffs.ipynb
notebooks/pinns/: Deep Learning a PDE for Call Options.ipynb  Deep Learning a PDE for Worst Of Options.ipynb
python/: .pylintrc  generate_sabr.py  pinns_worst_of.py  sdevpy.code-workspace  settings.py  test.py  train_sabr_vec.py  view_sabr.py
samples/: McHeston_samples.tsv
scripts/: pinns_worst_off.py  run_training.ps1
sdevpy/: __init__.py  logsetup.py  pricingcontext.py  sdevpy.code-workspace  settings.py  test.py
spreadsheets/: Check PDE.xlsx  relu_approx.xlsm
(+500 files in other folders)
