[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdevpy"
version = "1.0.6"
license-files = []
authors = [{ name="Sebastien Gurrieri", email="sebgur@gmail.com" }]
description = "Python package for Finance"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["pandas", "numpy", "scipy", "matplotlib", "holidays",
                "pandas_market_calendars"
]
#dependencies = ["pyperclip", "tensorflow", "scikit-learn",
# "tensorflow_probability", "silence_tensorflow"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sdevpy*", "notebooks*"]  # Only include these
#exclude = ["notebooks*", "spreadsheets*"]      # Exclude these

[project.urls]
"Git page" = "https://github.com/sebgur/SDev.Python"
"SDev Finance" = "http://sdev-finance.com/"
