[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdevpy"
version = "1.0.8"
license-files = []
authors = [{ name="Sebastien Gurrieri", email="sebgur@gmail.com" }]
description = "Python package for Finance"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["pandas", "numpy", "scipy", "matplotlib", "holidays",
                "pandas_market_calendars", "openpyxl", "colorlog",
                "scikit-learn"
]
#dependencies = ["pyperclip", "tensorflow", "scikit-learn",
# "tensorflow_probability", "silence_tensorflow"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sdevpy*"] # Only include these
exclude = ["sdevpy/volatility/impliedvol/models/tssvi2*"]
#exclude = ["notebooks*", "spreadsheets*"] # Exclude these

[tool.setuptools.package-data]
"sdevpy" = ["datasets/**/*", "notebooks/**/*.ipynb"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "N", "W", "UP", "B"]
ignore = ["E401", "I001"]

[tool.coverage.run]
omit = [
    "sdevpy/**/__init__.py",
    "sdevpy/projects/raschka/*"
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == '__main__':",
]

[project.urls]
"Git page" = "https://github.com/sebgur/SDev.Python"
"SDev Finance" = "http://sdev-finance.com/"
